[project]
name = "gemma-train"
version = "0.1.0"
description = "Gemma fine-tuning with LoRA / PEFT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.5.0",
    "torchvision",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "bitsandbytes>=0.44.0",
    "sentencepiece",
    "protobuf",
    "safetensors",
    "huggingface-hub",
    "einops",
    "scipy",
    "evaluate",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
